crates/pixi-build-mojo/src/snapshots/pixi_build_mojo__tests__compiler_is_in_build_requirements.snap
---
source: crates/pixi-build-mojo/src/main.rs
expression: generated_recipe.recipe
---
context: {}
package:
  name: foobar
  version: 0.1.0
source: []
build:
  number: ~
  script: "[ ... script ... ]"
requirements:
  build: []
  host: []
  run:
    - boltons
  run_constraints: []
tests: []
about:
  homepage: ~
  license: ~
  license_file: ~
  summary: ~
  description: ~
  documentation: ~
  repository: ~
extra: ~
