crates/pixi-build-mojo/src/snapshots/pixi_build_mojo__tests__env_vars_are_set.snap
---
source: crates/pixi-build-mojo/src/main.rs
expression: generated_recipe.recipe.build.script
---
content: "[ ... script ... ]"
env:
  foo: bar
secrets: []
