crates/pixi-build-mojo/src/snapshots/pixi_build_mojo__tests__mojo_pkg_is_set.snap
---
source: crates/pixi-build-mojo/src/main.rs
expression: generated_recipe.recipe
---
context: {}
package:
  name: foobar
  version: 0.1.0
source: []
build:
  number: ~
  script:
    content: "mojo --version\n\nmojo build -i . ./main.mojo -o $PREFIX/bin/example\n\n\nmojo package -i . mylib -o $PREFIX/lib/mojo/lib.mojopkg"
    env: {}
    secrets: []
requirements:
  build: []
  host: []
  run:
    - boltons
  run_constraints: []
tests: []
about:
  homepage: ~
  license: ~
  license_file: ~
  summary: ~
  description: ~
  documentation: ~
  repository: ~
extra: ~
